fixed the gap

--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@ body {
   .core {
     flex-direction: column;
     width: 25rem;
-    gap: 2.5rem;
+    justify-content: space-evenly;
   }
 }
 
